static/style.css
/* ... */
.gitLink {
  margin-left: auto;
}

.github {
  height: 30px;
  width: 30px;
  float: right;
}

.text, .image {
    flex: 1;
}

.footer-text{
    font-family: 'Roboto Mono', monospace;
    font-size: 12px;
    margin-right: 10px;
}

.footer-right {
  margin-right: 25px; /* Pushes the text to the right by taking up all available space */
}



.logo {
  float: left;
  font-family: 'Honk', system-ui;;
}

.loginWidget{
    display: flex;
    width: 100%;
    max-width: 1000px;
    max-height: 371px;
    margin: 70px auto;
    border-radius: 10px; /* Rounded corners */
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
    overflow: hidden; /* Ensure the shadow doesn't overflow */
}

.registerWidget{
    display: flex;
    width: 100%;
    max-width: 1000px;
    max-height: 371px;
    margin: 70px auto;
    border-radius: 10px; /* Rounded corners */
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
    overflow: hidden; /* Ensure the shadow doesn't overflow */
}

.loginImage{
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.loginImage img{
    width: 100%; /* Let the browser adjust width based on height to maintain aspect ratio */
    max-width: none; /* Remove any maximum width constraints */
    height: auto; /* Match the height of the container */
}

.loginContainer{
    justify-content: center;
    align-items: center;
    flex: 1;
    flex-direction: column;
}



  /* Creates a box for the login form to go on */
.loginBox {
    padding: 20px;
    background-color: #c2ffdd;
    flex-direction: column;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  /* Makes the login text better formatted within the loginBox */
.userLogin {
  text-align: center;
  font-size: 20px;
  color: black;
  font-family: 'Roboto Mono', monospace;
  justify-content: center;
  align-items: center;
}

/* The header for each page, makes it look bigger and centered */
.title {
  text-align: center;
  font-size: 40px;
  font-family: 'Metrophobic', monospace;
  color: white;
  margin-top: 10px;
  
}

.loginText{
    font-family: 'Roboto Mono', monospace;
    margin-top: 5px;
    margin-bottom: 20px;
}

.loginField {
    font-family: "Roboto Mono", monospace;
    border-radius: 10px;
    padding: 5px;
    border-width: 2px;
    border-style: solid;
    border-color: #ddd;
}

.loginButtons{
    flex-direction: column;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Changes the input button to look better with no border and a better font */
input[type = submit] {
  padding: 5px 15px;
  border: 0 none;
  font-family: 'Roboto Mono', monospace;
}

/* The button that takes you between the login page and the register page */
.registerButton {
  font-family: 'Montserrat', sans-serif;
  color: #27a8ee;
}


.flashes {
  display: flex;
  font-family: 'Roboto Mono', monospace;
  text-align: justify;
  width: 10vw;
  border-radius: 10px;
  margin: 20px auto 0;
  align-items: center;
}

.flashes p {
  flex: 1;
  margin: 0;
  text-align: center;
  padding: 15px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  white-space: nowrap;
}

.flashes span {
  margin-left: auto;
  padding: 13px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  font-size: 25px;
  transition: 0.1s;
}

.flashes span:hover {
  font-size: 30px;
  padding: 10.5px;
  cursor:pointer;
}

.info,
.error {
  color: white;
  border: 3px solid white;
}

.info {
  background-color: #000;
}

.error {
  background-color: red;
}

/* 

.error {
  font-family: 'Montserrat', sans-serif;
  font-size: 20px;
  background-color: #f8d7da;
  color: #721c24;
  padding: 10px;
  border: 1px solid #f5c6cb;
  border-radius: 5px;
  text-align: center;
  display: inline-block;
  position:absolute;
  z-index: 1;
}

.info {
  background-color: #080F0F;
  color: white;
  overflow: hidden;
  font-family: 'Montserrat', sans-serif;
  font-size: 20px;
  background-color: #d1ecf1;
  color: #0c5460;
  padding: 10px;
  border: 1px solid #bee5eb;
  border-radius: 5px;
  text-align: center;
  display: inline-block;
} */ */

.mainScreen {
  height: 650px;
  padding-top: 1px;
  background-color: #18637B;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}

.helpScreen {
  height: 650px;
  margin-top: 10px;
  padding-top: 10px;
  background-color: #3B8D61;
  border-radius: 25px;
}

.steps {
  font-family: 'Montserrat', sans-serif;
  font-size: 35px;
  text-align: center;
  color: #ddd;
  padding-left: 10px;
  padding-right: 10px;
}

.helpTitle {
  font-family: 'Montserrat', sans-serif;
  font-size: 50px;
  text-align: center;
  color: #ddd;
}

/* Adds a bottom bar to every page for the copyright information */
.bottomBar {
  display: flex;
  justify-content: space-between; /* Align items to the start and end of the container */
  align-items: center;
  position: fixed;
  bottom: -90px;
  width: 100%;
  background-color: #9FFFCB;
  padding: 10px;
  overflow: hidden;
  transition: bottom 0.3s;
}

.bottomBar.visible {
  bottom: 0; /* Move the footer back to its original position */
}

.mainCreators {
  font-family: 'Montserrat', sans-serif;
  font-size: 10px;
  display: flex;
  color: #000000;
  padding-left: 10px;
  padding-right: 10px;
}
/*
.dashboardContainer .tableDiv:hover{
  margin-top: 10vh;
  margin-left: 0.5vw;
  height: 89vh;
  width: 51vw;
}

.dashboardContainer .addDiv:hover{
  margin-top: 10vh;
  margin-left: 0.5vw;
  height: 49vh;
  width: 48vw;
}

.dashboardContainer .infoDiv:hover{
  margin-top: 1vh;
  margin-left: 0.5vw;
  height: 40vh;
  width: 48vw;
}
*/

.dashboardContainer{
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin-top: 25px;
  margin-bottom: 25px;
}

.leftWidget.visible{
  display: flex;
  animation: slideinLeft 1000ms forwards;
}
/* ... */

